21-eks-Ingress-advanced/5-ExternalDNS/1-ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-context-pathbased-routing
  annotations:
    # Load balancer name
    alb.ingress.kubernetes.io/load-balancer-name: ingress-cpr
    # Ingress Core Setting
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Setting
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:772745136297:certificate/9b1e0883-3558-43c9-b7db-cb1eb274b093
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # External DNS - For creating a Record Set in Route53
    external-dns.alpha.kubernetes.io/hostname: external-dns1.neuniktechnologygroup.com, external-dns2.neuniktechnologygroup.com

spec:
  ingressClassName: my-aws-ingress-class  # Ingress Class
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: webapp1-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: webapp2-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp3-service
            port:
              number: 80
